src/Apps/DrawDoc/style.css
button>label {
  font-size: small;
  cursor: pointer;
}

#drawDocTopNavBar {
  color: inherit;
}

#drawDocTopNavBar>svg {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  padding-left: 2px;
  padding-right: 2px;
}

#drawDocTopNavBar>button:enabled {
  color: inherit;
}

#drawDocTopNavBar>*>button:enabled {
  color: inherit;
}

#drawDocToolBar {
  display: flex;
  color: inherit;
  flex-direction: column;
  height: 100%;
  width: 30px;
  border-right: 1px var(--GeneralBorderColor) solid;
}

#drawDocToolBar>button {
  color: inherit;
  font-size: 25px;
}

canvas-container {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: auto;
}

.drawDocCheckersBackground {
  background-image: url(./Assets/checkersBackground.jpg);
  background-size: cover;
}

#drawDocCheckersBackground {
  position: absolute;
  top: 1px;
  left: 1px;
  cursor: none;
}

.drawCanvasLayer {
  position: absolute;
  top: 1px;
  left: 1px;
  cursor: none;
  image-rendering: pixelated;
  image-rendering: crisp-edges;
}

#previewCanvas {
  position: absolute;
  top: 0px;
  left: 0px;
  background: transparent;
  image-rendering: pixelated;
  image-rendering: crisp-edges;
  border: 1px solid black;
}

#drawDocContentBar {
  display: flex;
  right: 0px;
  left: 0px;
  height: 100%;
  background: var(--AppBkgrColor);
  border: 1px var(--GeneralBorderColor) solid;
}

#drawDocContentBar>nav {
  width: 20px;
  border-right: 1px var(--GeneralBorderColor) solid;
}

#drawDocContentBar>nav>ul {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  height: 100%;
  margin: 0px;
  padding: 0px;
}

#drawDocContentBar>nav>ul>li {
  display: flex;
  flex-direction: column;
  width: 20px;
  justify-content: center;
  align-items: center;
  writing-mode: sideways-rl;
  text-orientation: sideways-right;
  padding-top: 5px;
  padding-bottom: 5px;
  border: 1px var(--GeneralBorderColor) solid;
  border-radius: 0px 10px 10px 0px;
  rotate: 180deg;
}

#drawDocContentBar>div {
  height: 100%;
  overflow-x: hidden;
}

#drawDocLayersWindow {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  padding-left: 2px;
}

#drawDocLayersWindow>button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 50%;
  margin: 2px;
  padding: 0px;
  border: 1px var(--GeneralBorderColor) solid;
  box-sizing: border-box;
}

#drawDocLayersWindow>hr {
  width: 100%;
  height: 2px;
  background-color: var(--GeneralBorderColor);
  padding: 0;
  margin-top: 2px;
  margin-bottom: 2px;
}

#drawDocLayersWindowNav {
  border-top: 1px var(--GeneralBorderColor) solid;
  border-bottom: 1px var(--GeneralBorderColor) solid;
  margin-top: 2px;
  margin-bottom: 2px;
  padding-left:2px;
  padding-right: 2px;
}

#drawDocLayersWindowHeaderMixes {
  width: 230px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  border-bottom: 1px var(--GeneralBorderColor) solid;
  padding-top: 2px;
  padding-bottom: 2px;
}

#drawDocLayersWindowHeaderOptions {
  display: flex; 
  flex-direction: row; 
  justify-content: space-evenly; 
  align-items: center;
  padding-top: 2px;
  padding-bottom: 2px;
}

#drawDocLayersWindowHeaderOptions>button{
  border: 1px var(--GeneralBorderColor) solid;
  box-sizing: border-box;
}

#drawDocLayersWindowHeaderOptions>button>svg{
  width:16px;
  height:16px;
}

.drawDocLayersWindowLayer {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  width: 100%;
  border: 1px var(--GeneralBorderColor) solid;
  margin: 2px;
  padding: 2px;
  box-sizing: border-box;
}

.drawDocLayersWindowLayer>div:first-child{
  display: flex;
  flex-direction: row;
  justify-content: start;
  align-items: center;
  width: 100%;
}

.drawDocLayersWindowLayer>div:first-child>div:first-child {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 75px;
  padding: 2px;
  box-sizing: border-box;
}

.drawDocLayersWindowLayer>div>div>div {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
}

.drawDocLayersWindowLayer>div>div>div:first-child {
  margin-bottom: 5px;
  justify-content: start;
}

.drawDocLayersWindowLayer>div>div>div>input[type="radio"] {
  width: 12px;
  height: 12px;
  margin: 0;
  margin-right: 5px;
}

.drawDocLayersWindowLayer>div>div>div>input[type="text"] {
  width: 100%;
}


.drawDocLayersWindowLayer>div>div>div>button {
  border: 1px var(--GeneralBorderColor) solid;
  box-sizing: border-box;
}

.drawDocLayersWindowLayer>div>img {
  max-width: 50px;
  max-height: 50px;
  object-fit: contain;
  margin-right: 5px;
  cursor: pointer;
}

.drawDocLayersWindowLayer>div:last-child{
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: end;
  width: 100%;
  margin-right:5px;
}

.drawDocLayersWindowLayer>div:last-child>div{
  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  width: 100%;
  margin-top:2px;
}

.drawDocLayersWindowLayer>div:last-child>div>span{
  min-width:75px;
}

.drawDocLayersWindowLayer>div:last-child>div>div{
  display: flex; 
  flex-direction: column; 
  align-items: end;
  border-left: 1px solid var(--GeneralBorderColor);
  border-right: 1px solid var(--GeneralBorderColor);
  padding-right:5px;
  border-radius:7px;
}
.drawDocLayersWindowLayer>div:last-child>div>div>div{
  display:flex;
  flex-direction: row;
  align-items: center;
}

#drawDocSelectionBox {
  position: absolute;
  background: transparent;
  border: 2px dashed white;
  mix-blend-mode: difference;
  cursor: move;
}

#drawDocSelectionBox>* {
  position: absolute;
  height: 10px;
  width: 10px;
  background: black;
  border: 2px solid white;
  box-sizing: border-box;
}

.drawDocSelectionPivotPoint {
  position: absolute;
  height: 10px;
  width: 10px;
  background: black;
  border: 2px solid white;
  box-sizing: border-box;
  cursor: move;
  transform: translate(-50%, -50%);
}

.drawDocSelectionPivotLine {
  position: absolute;
  background: transparent;
  border-top: 2px dashed white;
  mix-blend-mode: difference;
  transform-origin: top left;
  pointer-events: none;
}

#drawDocSelectionBoxNW {
  top: -12px;
  left: -12px;
  cursor: nwse-resize;
}

#drawDocSelectionBoxN {
  top: -12px;
  left: 50%;
  cursor: ns-resize;
  transform: translateX(-50%);
}

#drawDocSelectionBoxNE {
  top: -12px;
  right: -12px;
  cursor: nesw-resize;
}

#drawDocSelectionBoxE {
  top: 50%;
  right: -12px;
  cursor: ew-resize;
  transform: translateY(-50%);
}

#drawDocSelectionBoxSE {
  bottom: -12px;
  right: -12px;
  cursor: nwse-resize;
}

#drawDocSelectionBoxS {
  bottom: -12px;
  left: 50%;
  cursor: ns-resize;
  transform: translateX(-50%);
}

#drawDocSelectionBoxSW {
  bottom: -12px;
  left: -12px;
  cursor: nesw-resize;
}

#drawDocSelectionBoxW {
  top: 50%;
  left: -12px;
  cursor: ew-resize;
  transform: translateY(-50%);
}

#drawDocSelectionBoxNW {
  top: -12px;
  left: -12px;
  cursor: nwse-resize;
}

#drawDocSelectionBoxDragPivot {
  top: -44px;
  left: 50%;
  transform: translateY(75%);
  rotate: 45deg;
  cursor: move;
}

#drawDocSelectionBoxDragPivot::before {
  position: relative;
  display: block;
  content: "";
  top: 4px;
  left: 15.5px;
  height: 24px;
  width: 0px;
  rotate: -45deg;
  border-left: 2px dashed white;
}

#drawDocSelectionCircle {
  position: absolute;
  background: transparent;
  border: 2px dashed white;
  mix-blend-mode: difference;
  cursor: move;
  border-radius: 50%;
}

#drawDocSelectionCircle>* {
  position: absolute;
  top: -40px;
  left: 50%;
  transform: translateX(-50%);
  height: 10px;
  width: 10px;
  background: black;
  border: 2px solid white;
  border-radius: 50%;
  box-sizing: border-box;
  cursor:
    url("./Assets/Font Awesome 6/arrows-rotate.svg") 64 64,
    auto;
}

#drawDocSelectionCircle>*::before {
  position: relative;
  display: block;
  content: "";
  top: 10px;
  left: 1.5px;
  height: 28px;
  width: 0px;
  border-left: 2px dashed white;
}

#drawDocSelectionEllipse {
  position: absolute;
  background: transparent;
  border: 2px dashed white;
  mix-blend-mode: difference;
  border-radius: 50%;
  cursor: move;
}

#drawDocSelectionBoxText {
  position: absolute;
  resize: none;
  border: none;
  outline: none;
  color: transparent;
  background: transparent;
  overflow-y: visible;
}

#drawDocBottomNavBar {
  color: inherit;
  border-top: 1px var(--GeneralBorderColor) solid;
}

.cursorBrush {
  cursor:
    url("./Assets/GameIconsSVG/paint-brush-resized.svg") 52 75,
    auto;
}

.cursorBucket {
  cursor:
    url("./Assets/ThemifyIconsSVG/paint-bucket.svg") 2 28,
    auto;
}

.cursorPipette {
  cursor:
    url("./Assets/Css.gg/color-picker.svg") 4 20,
    auto;
}

.cursorSpray {
  cursor:
    url("./Assets/ThemifyIconsSVG/spray.svg") 0 2,
    auto;
}

.cursorEraser {
  cursor:
    url("./Assets/ThemifyIconsSVG/eraser.svg") 2 28,
    auto;
}

.cursorText,
.cursorMagnifier,
.cursorSelect,
.cursorShape {
  cursor: crosshair;
}

.cursorLocked {
  cursor: not-allowed;
}

